added new features
added filament change prompt handler method in print.razor

--- a/WebUIBlazor/Pages/Connection.razor
+++ b/WebUIBlazor/Pages/Connection.razor
@@ -44,6 +44,7 @@
             background.ConnectionServiceSerial.Initialize($"{background.ConnectionServiceSerial.portName},{background.ConnectionServiceSerial.baudRate}");
             background.ConnectionServiceSerial.IsConnected = true;
             background.ConnectionServiceSerial.Connect();
+            background.SavePortName();
             printer.GetPrinterSettings();
             printer.GetFirmwareSettings();
             //set the host keep alive command to 1 second after connection
