--- a/WebUIBlazor/Pages/PrintHistory.razor
+++ b/WebUIBlazor/Pages/PrintHistory.razor
@@ -8,35 +8,42 @@
     <MudText Typo="Typo.h4" Align="Align.Center" Color="Color.Primary"> Print History</MudText>
 </div>
 
-@foreach (var printJob in printerDataServiceTest.printHistory)
-{
-    <div style="display:flex; justify-content:center; align-items: center;">
-        <div style="width:30%;">
-            <ContainerSpaceBetween>
-                <MudText>File name:</MudText>
-                <MudText>@printJob.FileName</MudText>
-            </ContainerSpaceBetween>
-            <ContainerSpaceBetween>
-                <MudText>Total print time:</MudText>
-                <MudText>@printJob.TotalPrintTime</MudText>
-            </ContainerSpaceBetween>
-            <ContainerSpaceBetween>
-                <MudText>Start time of print:</MudText>
-                <MudText>@printJob.StartTimeOfPrint</MudText>
-            </ContainerSpaceBetween>
-            <ContainerSpaceBetween>
-                <MudText>File size:</MudText>
-                <MudText>@Math.Round(printJob.ConvertToMB(printJob.FileSize), 2)MB</MudText>
-            </ContainerSpaceBetween>
-            <MudDivider />@*
-        <ContainerSpaceBetween>
-        <MudText>End time of print: @printJob.EndTimeOfPrint</MudText>
-        </ContainerSpaceBetween>  *@
-        </div>
+<MudGrid>
+    <MudItem xl="6">
+        @foreach (var printJob in printerDataServiceTest.printHistory)
+        {
+            <div style="display:flex; justify-content:center; align-items: center;">
+                <div style="width:60%;">
+                    <ContainerSpaceBetween>
+                        <MudText>File name:</MudText>
+                        <MudText>@printJob.FileName</MudText>
+                    </ContainerSpaceBetween>
+                    <ContainerSpaceBetween>
+                        <MudText>Total print time:</MudText>
+                        <MudText>@printJob.TotalPrintTime</MudText>
+                    </ContainerSpaceBetween>
+                    <ContainerSpaceBetween>
+                        <MudText>Start time of print:</MudText>
+                        <MudText>@printJob.StartTimeOfPrint</MudText>
+                    </ContainerSpaceBetween>
+                    <ContainerSpaceBetween>
+                        <MudText>File size:</MudText>
+                        <MudText>@Math.Round(printJob.ConvertToMB(printJob.FileSize), 2)MB</MudText>
+                    </ContainerSpaceBetween>
+                    <MudDivider />@*
+                <ContainerSpaceBetween>
+                <MudText>End time of print: @printJob.EndTimeOfPrint</MudText>
+                </ContainerSpaceBetween>  *@
+                </div>
 
-    </div>
+            </div>
+        }
+    </MudItem>
+    <MudItem xl="6">
+        <MudText>All Time Stats</MudText>
+    </MudItem>
+</MudGrid>
 
-}
 
 @code {
     protected override void OnInitialized()
