--- a/WebUIBlazor/Pages/Print.razor
+++ b/WebUIBlazor/Pages/Print.razor
@@ -147,7 +147,7 @@
                 <MudText><strong>@PrintManager.printJob.FileName</strong></MudText>
             </ContainerSpaceBetween>
             <ContainerSpaceBetween>
-                <MudText>Estimated print time:</MudText>
+                <MudText>Estimated print time left:</MudText>
                 <MudText>@PrintManager.estimatedTime</MudText>
             </ContainerSpaceBetween>
             <ContainerSpaceBetween>
