--- a/WebUIBlazor/Pages/Printers.razor
+++ b/WebUIBlazor/Pages/Printers.razor
@@ -2,7 +2,7 @@
 @inject Data.PrinterDataServiceTest printer
 @inject Data.BackgroundTimer background
 
-<ConnectionStatus SelectedPrinter="@printer.SelectedPrinter.Name" Connection="printer.serialConnection.IsConnected" />
+<ConnectionStatus />
 
 <MudCard>
     <MudExpansionPanels MultiExpansion="true">
