--- a/WebUIBlazor/Pages/ControlPanel.razor
+++ b/WebUIBlazor/Pages/ControlPanel.razor
@@ -14,7 +14,7 @@
 
 <ConnectionStatus SelectedPrinter="@printer.SelectedPrinter.Name" Connection="background.ConnectionServiceSerial.printerConnection.IsConnected" />
 <PrinterState />
-<MudGrid>
+<MudGrid Style="width: 100vw;">
 
     @* Interactive Bed -------------------------------------------------------------- *@
     <MudItem xs="12" md="6" lg="4">
